Prevent navigation link text from wrapping to next line

--- a/src/app/navigation/navigation.component.sass
+++ b/src/app/navigation/navigation.component.sass
@@ -7,6 +7,7 @@ nav
     text-decoration: none
     color: darkgray
     font-size: 1.5em
+    white-space: nowrap
     margin-left: 1.5em
     margin-right: 1.5em
     &.active
